[tool.poetry]
name = "robotic-code-repr"
version = "0.1.0"
description = ""
authors = ["Radoslaw <tidecode.radoslawh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pytest = "^8.0.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
